Split main app into two components, not functional

--- a/dashboard/src/App.less
+++ b/dashboard/src/App.less
@@ -5,9 +5,16 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   border: 1px solid green;
 }
 
 .side-menu {
+  color: white;
   align-items: space-evenly;
+}
+
+.menu-item {
+  border: 1px solid white;
 }
