--- a/dashboard/src/App.less
+++ b/dashboard/src/App.less
@@ -10,11 +10,24 @@
   border: 1px solid green;
 }
 
-.side-menu {
+.side-panels {
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-evenly;
   color: white;
-  align-items: space-evenly;
 }
 
-.menu-item {
-  border: 1px solid white;
+.owner-panel {
+  height: 30%;
+  word-wrap: break-word
+}
+
+.repo-panel {
+  height: 50%;
+  word-wrap: break-word
+}
+
+.search-panel {
+  height: 20%;
+  word-wrap: break-word
 }
