Default visualizations now loading properly

--- a/dashboard/src/App.less
+++ b/dashboard/src/App.less
@@ -7,13 +7,12 @@
 .content {
   display: flex;
   flex-direction: column;
-  border: 1px solid green;
+  border: 0.5px solid gray;
 }
 
 .side-panels {
   display: flex;
   flex-direction: column;
-  // justify-content: space-evenly;
   color: white;
 }
 
