Owner panels cleaned up

--- a/dashboard/src/App.less
+++ b/dashboard/src/App.less
@@ -7,26 +7,30 @@
 .content {
   display: flex;
   flex-direction: column;
-  border: 0.5px solid gray;
+  border: 0.25px solid gray;
 }
 
 .side-panels {
   display: flex;
   flex-direction: column;
   color: white;
+  text-align: center;
 }
 
 .owner-panel {
   height: 30%;
-  word-wrap: break-word
+  word-wrap: break-word;
+  border: 0.5px solid gray;
 }
 
 .repo-panel {
   height: 50%;
-  word-wrap: break-word
+  word-wrap: break-word;
+  border: 0.5px solid gray;
 }
 
 .search-panel {
   height: 20%;
-  word-wrap: break-word
+  word-wrap: break-word;
+  border: 0.5px solid gray;
 }
